Core: Add Apache Ignite Repo (#140)